finished requirements section

--- a/docs/Visual Editor Final Report/ve_final_report.tex
+++ b/docs/Visual Editor Final Report/ve_final_report.tex
@@ -72,7 +72,18 @@ The module should allow the user to recover from errors with informative and und
 5) Student Learning Experience.  (In order to support the learning of young computing students, the module will provide an engaging interest that increases their interest in the subject.  Effectiveness may be measured by student retention rates and self-reported interest levels.) Met - the module provides the basic template to facilitate student's understanding of code structure and its effects.  Additional options and refinement could further increase interest. \newline \newline 
 6) Platform.  (Users will be able to run the module from Windows or Mac.)  Met - All of Edith can be accessed from Windows or Mac computers.  \newline \newline 
 7) Open Source.  (After initial development, the source code will be open and redistributed with improvements by anyone.) Not Met - The class is not yet at that point, as the final integration was just yesterday.  Student interest will help determine whether the project is made open source. \newline \newline 
-Overall, Usability, Documentation and Student Learning Experience were the most helpful non-functional requirements, as meeting these requirements together means that the project is a basic success.  In other words, if aspiring programmers can understand how to use the system and have a good learning experience, the goal has been achieved.  
+Overall, Usability, Documentation and Student Learning Experience were the most helpful non-functional requirements, as meeting these requirements together means that the project is a basic success.  In other words, if aspiring programmers can understand how to use the system and have a good learning experience, the goal has been achieved. \newline \newline
+Functional Requirements and their Status: \newline \newline
+1) The system shall allow the user to edit a variable.  Met - the user is able to use the VE to select a variable, change paramaters, and save the variable in a method. \newline \newline
+2) The system shall have drag and drop functionality for methods.  Met - the user can create a new variable and select it, and drag and drop it in the provided boundaries.  \newline \newline
+3) A user shall be able to instantiate a conditional statement.  Met - the user can drag and drop a conditional statement (e.g., if) and place conditions inside.  \newline \newline 
+4) A user shall be able to instantiate a boolean operator.  Not met - due to time constraints, boolean options were not included as the most basic functionality was prioritized. \newline \newline
+5) A user shall be able to connect actions (connect selected blocks together).  Not met - due to time constraints, boolean options were not included as the most basic functionality was prioritized. \newline \newline
+6) The user shall be able to delete a method.  Met - when the user drags a method (or other) block to the left of the story line, the method is immediately deleted from the code.  \newline \newline
+7) The user shall be able to instantiate a loop.  Met - the system provides loop blocks (e.g., while) for the user to instantiate loops.  \newline \newline
+8) The system will allow the user to create a new action.  Met - the user can select a new method block, drag the method into the workbox, and provide arguments to create the method.  \newline \newline
+9) The system will allow a sprite object to be added.  Met - Edith allows the addition of provided sprites, uploaded sprites, and sprites created by the user in Edith.  \newline \newline
+All of the functional requirements except Connecting Actions (5)  are very important; they are the basic functional elements that allow users to create animations in Edith.   
 
 
 
