Adds Requirements Eval

--- a/Final Report/AS_Final_Report.tex
+++ b/Final Report/AS_Final_Report.tex
@@ -89,6 +89,27 @@ This section will likely be between 1 and 3 pages in length.\\
 
 
 \section{\emph{Requirements Evaluation}}
+Animation teams initial requirements contained an interesting combination of very specific and very vague requirements. This was not a huge problem for us, as we managed to change things around when we needed to in order to facilitate the same end effect that the initial requirements were going for. One of the primary functions of the Edith system is to teach object oriented programming skills, so we thought that it would be helpful if our animation system ran in an object oriented way. \\
+
+\noindent \textbf{Animation Requirements and Analysis}\\
+
+\noindent\textit{The Animation System would accept JSON instructions to be defined in an API that gave instructions for types of animations, durations and other parameters.}\\
+
+This requirement is one of the bigger ones that changed. There was some misunderstanding about how the final system would all work for awhile. This requirement was written when our perception was that we would have our own canvas and possibly an HTML file with which to write in buttons and such for playback controls, etc. In the final Edith implementation, the animation canvas is just a canvas plopped onto the main page as a piece of the website. Thus, the actual HTML of the page was handled by the Story Creator team, and Animation provided our code solely via an external JavaScript file. There was then a second period of misunderstanding in which the requirements changed, and we were under the impression that this external JavaScript file would be called on by the Visual Editor team via ‘hooks’, so their blocks would call our code. Again, this changed, as in the final implementation we went with an altogether different version. Our final version contains a ‘animationMain()’ method, which simply runs the JavaScript eval() function on a String of JavaScript code. This way, the Visual Editor team was able to construct the string using their blocks. These blocks simply added text to the string that was the aforementioned hooks to our program. The play button from the Story Creator team then simply called our main() method, with the parameter of the Visual Editors string of JavaScript code, which gets evaluated and runs like JavaScript. If there are any errors in the string, it will crash just as normal JavaScript would which is intended as we wanted to simulate a real programming experience and not something that worked every time. 
+	One thing that did end up as we said it would was the API that we created, which was incredibly helpful in creating the linkup between the visual editor’s panel and hooks to our code. \\
+
+\noindent\textit{The JSON instructions would be read by the animation system, which would then create animations and sounds in a frame based system.}\\
+
+As mentioned above, we made the choice to use the oCanvas external library to ease the production of an object oriented experience for the user in the end. In the end, the use of the oCanvas turned out to be both a blessing and a curse. It definitely simplified things for us in the beginning, but as we looked towards some of our other requirements or even just tried to do additional things with our animations we were hampered by the system. The oCanvas uses animation queues for sprites to move around the queue. In regards to the sprites, we met our requirements, as that is how we described the animations to work. However, we had the notion that our animations would work because they would produce a series of frames, which we could easily store in an array, and then just flash onto the screen while iterating through them. This did not end up working out, because the oCanvas does animations as a queue of actions with a length. If you want to do certain series of animations, it would actually be easier in a custom system. For example, if you want a sprite to begin moving across the screen, and then midway through the motion begin spinning as well, you run into problems. Calling move and then rotate will result in the sprite moving to the location, stopping, and then rotating. To get the desired animation you would need to start a new queue, and put the rotation in there. This still doesn’t solve the issue, because now your sprite would start moving and spinning at the same time. So you’d really have to make a new queue, put a wait() call in one, and then add the rotate to that. In our initial understanding, we thought that our methods would have some sort of a duration parameter as well as a timestamp parameter that told the system when it needed to be called. Because of the odd nature of the queue within the oCanvas, once we were overly reliant on that (which unfortunately came in the beginning of our development) it was very difficult to find work-arounds without sacrificing all of our previous work and starting over.\\
+
+\noindent\textit{The Animation System provides video output to be taken by another group and drawn onto the canvas, simultaneously playing associated sound files in a standard audio format.}\\
+
+This requirement was half met. We did draw our animations onto a canvas that another group gave us a reference to, but it is not just a video file. Our animations work through an interactive display painted on a regular HTML 5 canvas. The downside of this is that there is not currently a way to export a video file created using Edith. However, using the framework is there for videos and projects to be fairly easily loaded by another user into Edith, although that functionality isn’t implemented. There was a period of time when we considered adding audio to our videos, and our earlier integration demos actually featured a working video and audio combination, as well as an interface for easily associating sound files with a particular animation. However, there was no other group working on any of the other means that were needed for the audio to work, and they were all swamped with their development. What would have been needed: a way to share/access audio files via sharing framework, a way to upload your own sound file or access a stock database of files, and an interface for scrolling through given sounds and attaching them to animations, which in all would have required Sharing Framework, Object Creator, and Visual Editor to all do additional work which was not specified at all in the requirements. Here is a good example of how we didn’t really think through how we wanted the sound to work with the framework of the rest of the project. Obviously the sound worked within our animation system, as we had it working, but our requirements in the beginning did not make it clear what would need to happen from other groups. \\
+
+\noindent\textit{The Animation System will have playback control functionality that will allow a user to pick a time to begin their video from, and watch it from their to enable easier testing and editing of videos within Edith}\\
+
+This requirement was not met. As described above, we ran into problems with the way that we chose to implement the object oriented nature of our sprite animations, specifically in oCanvas difficulty. Again, this was because we began implementation using the oCanvas without thinking through the process of how an array of frames for a scene might work. Once we got ahead of ourselves, it was very difficult to backtrack and find a solution for playback controls. We could have implemented a very rudimentary system that enabled the user to jump to specific instructions that they had chosen, or even to a specific time, but the outcome would have been quite messy. Problems that we anticipated were instructions that would effectively be ‘lost’ if a user attempted to jump to a time that was part way between the start of the animation and the finish. This implementation would have been moderately useful for a user who wanted to jump to the end of a very long video, but we felt that it would have been buggy with no ways to fix the issues. Again, this was a product not only of our reliance on the oCanvas but also of a failure to comprehend how we would implement our requirements. In short, our requirements were initially too vague. In the end, we did not even implement a simple start/stop function. This is because the oCanvas has no way of stopping an animation and then resuming it, so we could stop animations, but then there was no other way to continue. We failed this requirement. 
+
 \section{\emph{System Design} \& \emph{Architecture}}
 Animation teams final implementation is contained within one javascript file and contains a list of functions that can be utilized by other groups. These functions are primarily functions that animate objects (sprites) on the canvas but also include a few functions that allows for the ability to add sprites onto the canvas. To achieve this, our design utilizes and relies heavily on an external library called oCanvas. oCanvas is a JavaScript library that is intended to make development with a HTML5 Canvas easier. Instead of working with pixels, oCanvas allows for an object oriented interface allowing animations to be applied to objects, in our case, sprites. oCanvas can be thought of as strapping extra functionality onto a preexisting HTML5 canvas as all of the generic HTML5 canvas functions are still available and can be interweaved with any of the oCanvas functions. More information and documentation about oCanvas can be be found at their website: http://ocanvas.org. Because our code contained in one JavaScript file, we have appended the oCanvas library directly into our code as it can not be imported in line as it could be with HTML. \\
 
