adds zekes reflection

--- a/Final Report/AS_Final_Report.tex
+++ b/Final Report/AS_Final_Report.tex
@@ -161,7 +161,10 @@ KRAMER TYPES HERE
 \end{changemargin} 
 \subsection{Zeke Rosenberg}
 \begin{changemargin}{1cm}{0cm} 
-ZEKE TYPES HERE
+The Animation team’s biggest struggles were in the definition of what we needed to accomplish. I don’t think any of us had a very firm grasp on Edith as a whole project at the beginning, and our requirements reflected that—they were vague and ill defined. This caused us a lot of problems because we continuously got ahead of ourselves without planning out what we needed to do. This worked fine for us as an isolated team, because the five of us was a small enough team and we were all flexible that we could practice a sort of agile development in which we would change course depending on what needed to be done. However, this did not work very well within the scope of the larger scale Edith project, as there were lots of miscommunications with other groups about what we were providing and how it would work. 
+	I think that most of our problems could have been solved by just a little more planning before we actually began working on anything, as well as thinking about the ramifications of our design decisions as we were making them. One of the places where we got ahead of ourselves the most was with the Ocanvas, because it hampered our development on several other key deliverables including exporting videos, a frame based animation system, and playback controls. That being said, we were able to use it to get what we wanted to accomplish done. This is both a technical and an organizational failure which fit together. The Organizational failure was in our lack of preemptive planning and strategy, and our technical problems stemmed from that lack of examining our overall approach to animations. The takeaway from both of these is that we need to in the future spend more time on our requirements, and make them as detailed as possible so we have a very clear roadmap to go by. This was difficult, because we were trying to keep our requirements from being overly technical, but without the technical details we were somewhat lost in where to begin with our development. 
+	Our use of Git was very interesting. It was definitely effective for sharing files between us, but not much more than that—I don’t think we took full advantage of the possibilities for testing by branching, so we ended up just making lots of unnecessary additional files to test things with. Additionally, the most productive times that we had occurred when working as a group in the same room, in which git helped us track changes and keep everyone following along on different computers, but in the end we were coding in a style much similar to pair programming and just working together. This was an effective way for us to work because it also enabled us to use real life aides as simple as pencil and paper drawings of what we wanted to happen our diagrams of interactions between components. 
+	If I was starting Edith all over again, the first thing that I would do is spend more time in the beginning on the requirements, and make sure that they matched up to all of the other groups. If I was doing the animation system, I would probably prefer to work from scratch (without Ocanvas), because while it would be much more daunting in terms of man hours it would also allow us to include a lot more functionality such as the playback controls or more interesting custom animations (like scaling or color changing). 
 \end{changemargin} 
 \subsection{Calder Whiteley}
 \begin{changemargin}{1cm}{0cm} 
