--- a/Final Report/AS_Final_Report.tex
+++ b/Final Report/AS_Final_Report.tex
@@ -43,49 +43,11 @@ This should be about the animation system This should be about the animation sys
 \end{changemargin} 
 
 \section{\emph{Development Procedures}}
-In this section, provide a brief discussion of your development process. Your goal is to explain your development and evaluate what worked and what didn't. You should be sure and address the following points:
-
-What kind of process model did you follow? (Likely this is a hybrid of multiple models we discussed in class). What components did you work on in what order? What was effective and not effective about your process and how you structured your development?
-What forms of testing did you include? How do you know if your program works? What forms of testing were effective or ineffective?
-Which team members were responsible for which components? This should be more than "everyone worked on everything"--who contributed what to the system?
-Be sure and address all parts of the questions.
-
-Include plenty of specifics in your descrption. This section should basically explain what you did in the course in terms of the final project, with enough detail that a reader could understand what activities you did and how you spent your time. Imagine writing for someone who hadn't taken the course and was curious what you did.
-A key part of this discussion is analyzing what worked and what didn't. Be sure and address why you think some part of the process model wasn't effecive for this project. For example: why or why didn't putting together a requirements document help?
-This section will likely be between 1 and 3 pages in length.\\ 
-
-In this section, provide a brief discussion of your development process. Your goal is to explain your development and evaluate what worked and what didn't. You should be sure and address the following points:
-
-What kind of process model did you follow? (Likely this is a hybrid of multiple models we discussed in class). What components did you work on in what order? What was effective and not effective about your process and how you structured your development?
-What forms of testing did you include? How do you know if your program works? What forms of testing were effective or ineffective?
-Which team members were responsible for which components? This should be more than "everyone worked on everything"--who contributed what to the system?
-Be sure and address all parts of the questions.
-
-Include plenty of specifics in your descrption. This section should basically explain what you did in the course in terms of the final project, with enough detail that a reader could understand what activities you did and how you spent your time. Imagine writing for someone who hadn't taken the course and was curious what you did.
-A key part of this discussion is analyzing what worked and what didn't. Be sure and address why you think some part of the process model wasn't effecive for this project. For example: why or why didn't putting together a requirements document help?
-This section will likely be between 1 and 3 pages in length.\\ 
-
-In this section, provide a brief discussion of your development process. Your goal is to explain your development and evaluate what worked and what didn't. You should be sure and address the following points:
-
-What kind of process model did you follow? (Likely this is a hybrid of multiple models we discussed in class). What components did you work on in what order? What was effective and not effective about your process and how you structured your development?
-What forms of testing did you include? How do you know if your program works? What forms of testing were effective or ineffective?
-Which team members were responsible for which components? This should be more than "everyone worked on everything"--who contributed what to the system?
-Be sure and address all parts of the questions.
-
-Include plenty of specifics in your descrption. This section should basically explain what you did in the course in terms of the final project, with enough detail that a reader could understand what activities you did and how you spent your time. Imagine writing for someone who hadn't taken the course and was curious what you did.
-A key part of this discussion is analyzing what worked and what didn't. Be sure and address why you think some part of the process model wasn't effecive for this project. For example: why or why didn't putting together a requirements document help?
-This section will likely be between 1 and 3 pages in length.\\ 
-
-In this section, provide a brief discussion of your development process. Your goal is to explain your development and evaluate what worked and what didn't. You should be sure and address the following points:
-
-What kind of process model did you follow? (Likely this is a hybrid of multiple models we discussed in class). What components did you work on in what order? What was effective and not effective about your process and how you structured your development?
-What forms of testing did you include? How do you know if your program works? What forms of testing were effective or ineffective?
-Which team members were responsible for which components? This should be more than "everyone worked on everything"--who contributed what to the system?
-Be sure and address all parts of the questions.
-
-Include plenty of specifics in your descrption. This section should basically explain what you did in the course in terms of the final project, with enough detail that a reader could understand what activities you did and how you spent your time. Imagine writing for someone who hadn't taken the course and was curious what you did.
-A key part of this discussion is analyzing what worked and what didn't. Be sure and address why you think some part of the process model wasn't effecive for this project. For example: why or why didn't putting together a requirements document help?
-This section will likely be between 1 and 3 pages in length.\\ 
+Our early development mostly consisted of group brainstorming and planning.  Our development process originally seemed to follow the plan-based process but we quickly morphed to the agile system.
+We started our development with getting the basic animation and canvas functions implemented.  Once that was implemented we quickly moved on to JSON input parsing.  In parallel with the JSON parsing implementation we developed an Animation API which documented the animation blocks and their parameters.  As we added more advanced animations and refined our JSON format we updated the API to reflect these changes.  The final step to our implementation was creating the "hook" that allowed the timeline to play the animation sequence.  Debugging was an ongoing aspect of the entire development process.
+We tested our systems by creating animation instruction sets which utilized our animation blocks in as many was as we could think of.  
+All five of us took part in the software development, oftentimes led by Eric as he had the best grasp on the functionality of the oCanvas Library that we utilized.  Kramer handled the group liaison duties and Calder built the initial API structure.  Updating and maintaining the API content was handled as needed by all of the group members.
+Development and implementation went incredibly smoothly for our group and when we hit stumbling points we worked efficiently as a team to quickly overcome them.
 
 
 \section{\emph{Requirements Evaluation}}
@@ -168,7 +130,18 @@ The Animation team’s biggest struggles were in the definition of what we neede
 \end{changemargin} 
 \subsection{Calder Whiteley}
 \begin{changemargin}{1cm}{0cm} 
-CALDER TYPES HERE
+Aside from the initial  difficulty defining our team's deliverable goals, I found the largest challenge to be our early trouble with Git and GitHub.
+We had several occasions early on where the only way to push content was to delete the entire local repository and re-clone from the 
+branch master.  This came about because of some unknown error having to do with pulling from the branch master.  Since you are 
+required to be up to date on your local files prior to pushing, the inability to successfully pull updates from our branch master inhibited 
+our progress and lost us several iterations of our early work.  Once those issues magically disappeared we had little to no further trouble 
+with Git and GitHub for the remainder of the project.
+As a group we worked incredibly well together.  When members were unable to make meetings the laid-back, agile-system quality of our 
+team dynamic allowed us to effectively fill in for each other as needed, contribute from other locations as well as get quickly caught back up.
+Early meetings involved group brainstorming and mapping but rather quickly we moved into a "show-then-explain" method of conveying ideas 
+and getting work done.
+Towards the end of the project our group lost purpose as all of our modified deliverable conditions had been met.  Inter-team communications 
+were much less mature than our own member-to-member interaction.  As a result offering our services to other groups was relatively unfeasible.
 \end{changemargin} 
 \subsection{Jon Youmans}
 \begin{changemargin}{1cm}{0cm} 
